对共用的控制输出进行了封装，优化了部分带代码

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 src/test/
+Tagle.xlsx
+Tagle.iml
 
 ### STS ###
 .apt_generated
@@ -19,6 +21,7 @@ src/test/
 *.iws
 *.iml
 *.ipr
+.mvn
 
 ### NetBeans ###
 /nbproject/private/
